tests/baselines/reference/YieldExpression11_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression11_es6.ts(2,3): error TS1219: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression11_es6.ts (1 errors) ====
    class C {
      *foo() {
      ~
!!! error TS1219: Generators are only available when targeting ECMAScript 6 or higher.
        yield(foo);
      }
    }